<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/enter_msg_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_value_style"
        android:hint="@string/enter_name_text"
         />

    <EditText
        android:id="@+id/enter_msg_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_text"
        android:inputType="textPassword"
        style="@style/text_value_style"
        />

    <Spinner
        android:id="@+id/enter_msg_sex_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_nessary_text" />

    <EditText
        android:id="@+id/enter_msg_age_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_value_style"
        android:hint="@string/input_age_text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/enter_msg_qq_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_qq_num_text"
        style="@style/text_value_style"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/enter_msg_weibo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_weibo_num_text"
        style="@style/text_value_style"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/enter_msg_head_img_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:scaleType="centerInside" />

    <Button
        android:id="@+id/enter_msg_submit_btn"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/submit_text" />

</LinearLayout>