<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/login_name_et"
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_text" />

    <EditText
        android:id="@+id/login_password_et"
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_text" />

    <Button
        android:id="@+id/login_login_btn"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_text" />

</LinearLayout>