<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/item_add_path_start_place_text"
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_start_place_text" />

    <EditText
        android:id="@+id/item_add_path_start_time_text"
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_start_time_text" />
     <EditText
        android:id="@+id/item_add_path_end_place_text"
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_start_time_text" />

    <Spinner
        android:id="@+id/item_add_path_travel_way_spinner"
        style="@style/text_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/item_add_path_add_btn"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_text" />

</LinearLayout>